# Remixpack

./: README.md  pyproject.toml
remixpack_scrapping/: scrapy.cfg
remixpack_scrapping/remixpack_scrapping/: items.py  middlewares.py  pipelines.py  settings.py
remixpack_scrapping/remixpack_scrapping/spiders/: remixpack_scraping.csv  remixpack_scraping.py
