[tool.poetry]
name = "remixpack_analysis"
version = "0.1.0"
description = ""
authors = ["damien1994 <35398319+damien1994@users.noreply.github.com>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
